# casasign

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  E2E_TESTS_COMPLETE.md  README.md  SESSION_023_SUMMARY.md  TASKS.md  WEEK2_COMPLETE.md  WEEK4_PROGRESS.md  docker-compose.yml  pyproject.toml  pytest.ini
docker/: Caddyfile  docker-compose.caddy.yml  nginx.conf
docs/sessions/: 049-fes-jinja2-migration.md
migrations/: 001_create_signature_tables.sql  002_seed_email_templates.sql  003_add_contract_data_jsonb.sql  004_add_html_document_type.sql  004_update_email_templates_v2.sql  005_add_attachments_column.sql  006_add_signer_consents.sql
scripts/: clean_duplicates_via_api.py
src/: __init__.py  config.py  main.py
src/api/: admin_templates.py  pages.py  signatures.py  sse_status.py
src/core/audit/: audit_service.py
src/core/email/: resend_service.py  template_service.py
src/core/pdf/: __init__.py  audit_trail_generator.py  html_to_pdf_service.py  pdf_processor.py
src/core/repositories/: email_template_repository.py  signature_repository.py
src/core/services/: completion_service.py  signature_request_service.py  signing_service.py  (+1 more)
src/database/: __init__.py  base.py  engine.py  session.py
src/models/: email_template.py  signature_request.py
src/schemas/: email.py  signature.py  signing.py
src/templates/: base.html  contract_final.html
src/utils/: hash_utils.py  ip_utils.py  token_generator.py
tests/: conftest.py  test_attachments.py  test_json_mode.py  test_section_rendering.py  test_sections.py
tests/e2e/: test_admin_templates.py  test_fes_signature_flow.py  test_json_mode_mobile.py  test_mobile_signature.py
(+36 files in other folders)
